Cambios para obtener los ficheros en tiempo de ejecucion con el jar y eliminacion de plantillas de pruebas